# stacktach-shoebox

./: .gitignore  .gitreview  README.md  learn_pytables.py  requirements.txt  setup.cfg  tox.ini  var_strings.py
etc/: sample_rax_credentials.conf
shoebox/: archive.py  disk_storage.py  handlers.py  roll_checker.py  roll_manager.py  shoebox.py  utils.py
test/: test_callbacks.py  test_disk_storage.py  test_roll_checker.py  test_roll_manager.py  test_shoebox.py  test_utils.py
test/integration/: gen_events.py  test_json_tarball.py  test_rolling.py
test/integration/templates/: compute.instance.create.start_24.json  compute.instance.delete.start_8.json  compute.instance.reboot.start_6.json  compute.instance.snapshot.start_8.json
