[metadata]
name = shoebox
author = Dark Secret Software Inc.
author-email = admin@darksecretsoftware.com
summary = data archiving library
description-file = README
license = Apache-2
classifier =
    Development Status :: 2 - Pre-Alpha
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
        Topic :: Software Development :: Libraries :: Python Modules
keywords =
    setup
    distutils
[files]
packages =
    shoebox
data_files =
    etc/shoebox = etc/*
    etc/init =
        shoebox.packaging.conf
        shoebox.version.conf
