[metadata]
name = shoebox
version = 0.4
author = Dark Secret Software Inc.
author-email = admin@darksecretsoftware.com
summary = data archiving library
description-file = README.md
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
        Topic :: Software Development :: Libraries :: Python Modules
home-page = https://github.com/stackforge/stacktach-shoebox
keywords =
    json
    archive
    swift
    openstack
[files]
packages =
    shoebox
